Create classes: Point, Line, Figure, Triangle, Polygon

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CppCourseProjectKNU)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(CppCourseProjectKNU main.cpp src/main/cpp/SomeClass.cpp src/main/cpp/SomeClass.h)
+add_executable(CppCourseProjectKNU main.cpp src/main/cpp/FigureComponents/Point2D.cpp src/main/cpp/FigureComponents/Point2D.h src/main/cpp/Figures/abstract/Figure.h)
