Polygon2D: add triangulation method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,6 @@ add_executable(CppCourseProjectKNU main.cpp
         src/main/cpp/Figures/Polygon2D.h
         src/main/cpp/Figures/Polygon2D.cpp
         src/main/cpp/FigureComponents/Polyline2D.h
-        src/main/cpp/FigureComponents/Polyline2D.cpp)
+        src/main/cpp/FigureComponents/Polyline2D.cpp
+        src/main/cpp/triangulate/triangulate.cpp
+        src/main/cpp/triangulate/triangulate.h)
