--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,6 @@ add_executable(CppCourseProjectKNU main.cpp
         src/main/cpp/FigureComponents/Polyline2D.h
         src/main/cpp/FigureComponents/Polyline2D.cpp
         src/main/cpp/triangulate/triangulate.cpp
-        src/main/cpp/triangulate/triangulate.h)
+        src/main/cpp/triangulate/triangulate.h src/test/cpp/TestLine.cpp
+        src/test/Test.cpp
+        )
